--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
         "@testing-library/user-event": "^12.8.3",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-icon": "^1.0.0",
+        "react-icons": "^4.2.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "web-vitals": "^1.1.2"
     },
     "scripts": {
-        "start": "craco start",
-        "build": "craco build",
-        "test": "craco test",
-        "eject": "react-scripts eject"
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "watch:css": "npx tailwindcss -i ./src/assets/styles/index.css -o ./src/assets/styles/main.css -c ./tailwind.config.js -w"
     },
     "eslintConfig": {
         "extends": [
@@ -40,6 +43,7 @@
     "devDependencies": {
         "autoprefixer": "^9.8.6",
         "postcss": "^7.0.36",
+        "postcss-cli": "^8.3.1",
         "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.6"
     }
 }
